# Accelerator

./: .env.example  .gitignore  Dockerfile  IMPROVEMENT_PHASES.md  PHASE1_COMPLETION_REPORT.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE_3_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  ROADMAP.md  analyze_accelerator_coverage.py  debug_scrapers.py  docker-compose.yml  final_platform_analysis.py  get_platform_stats.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_server.py  test_accelerator_scraper.py  test_accelerators.py  test_api.bat  test_batch_integration.py  test_climate_sustainability.py  test_creator_economy_funding.py  test_international_events.py  test_job_platforms.py  test_live_scrapers.py  test_scholarship_package.py  test_scholarships.py  test_specific_accelerator.py  test_tech_learning_platforms.py
api/: index.py
config/: __init__.py  profile_data.yaml  settings.py
deployment/gcp/: cloud-run-service.yaml  cloud-scheduler-jobs.yaml  cloudbuild.yaml  main.tf  setup-gcp.sh
scripts/: daily_run.py  init_db.py  seed_profile.py
src/: __init__.py  api.py  cache.py  cli.py  filters.py  guardrails.py  monitoring.py  scheduler.py
src/agents/: __init__.py  application.py  discovery.py  interview_prep.py  outreach.py  profile.py  scoring.py
src/analytics/: ab_testing.py  dashboard.py  optimization_engine.py  performance_metrics.py  reporting.py
src/api/: mobile.py
src/data/: __init__.py  database.py  models.py  repositories.py
src/integrations/: __init__.py  browser_extension.py  mcp_tools.py  multi_user.py  notifications.py  voice.py
src/intelligence/: __init__.py  analytics.py  data_enrichment.py  embeddings.py  features.py  learning.py  ml_model.py  nlp_processor.py  recommendations.py  success_prediction.py  user_profiles.py
src/models/: __init__.py  application.py  enums.py  opportunity.py  profile.py
src/orchestrator/: __init__.py  engine.py  workflow_engine.py
src/pipeline/: __init__.py  application_generator.py  auto_apply.py  integration_layer.py  status_tracking.py  submission_engine.py
src/scoring/: __init__.py  calculator.py  weights.py
src/scrapers/: __init__.py  accelerator_scraper.py  african_opportunities_scraper.py  base_scraper.py  conference_event_scraper.py  fast_demo_engine.py  grants_scraper.py  indeed_scraper.py  linkedin_scraper.py  live_scrapers.py  mega_scraping_engine.py  opportunity_sources.py  remoteok_scraper.py  scholarship_fellowship_scraper.py  scholarship_scraper.py  scraping_engine.py  utils.py  vc_startup_scraper.py  web_browser_scraper.py  wellfound_scraper.py
src/scrapers/sources/: __init__.py  conferences.py  (+5 more)
src/services/: profile_service.py
src/templates/: __init__.py  base.py  cover_letters.py  essays.py  outreach.py  proposals.py
src/tools/: __init__.py  application.py  outreach.py  profile.py  scoring.py  search.py
static/: analytics_backup.html  analytics_new.html  auto-apply.html  auto-apply_new.html  index.html  index_backup.html  index_clean.html  index_minimal.html  index_new.html  index_original.html  index_ultra_minimal.html  interview-prep.html  interview-prep_new.html  monitoring.html  profile.html  profile_clean.html  profile_minimal.html  profile_new.html  profile_original.html  profile_ultra_minimal.html  tracker.html  tracker_backup.html  tracker_clean.html  tracker_minimal.html  tracker_original.html  tracker_ultra_minimal.html
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_guardrails.py  test_models.py
